# paperless-cli

./: README.md  paperless-cli-0.1.0.r5.g396fd30-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: release.yml  weekly-rebuild.yml
src/paperless_cli/: cli.py  client.py  commands.py  config.py  spec.py
src/paperless_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
