[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-cli"
version = "0.1.0"
description = "Command line client for the Paperless-ngx REST API"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "OpenAI Codex"}]
dependencies = []

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
paperless = "paperless_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
